--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>test</title>
+    <title>javascript效果测试</title>
 </head>
 <body>
-  <div class="top">这里就是个测试</div>  
+  <h1>javascript效果测试</h1>
 </body>
 </html>
