递归函数调用

--- a/app/递归函数调用.html
+++ b/app/递归函数调用.html
@@ -19,15 +19,15 @@
        document.write(factorial(5))
     </script>
     <code>
-        function factorial(n){
-            if(n == 1){
-                return n;
-            }else{
-                return n*factorial(n-1)
-            }
-         }
+        function factorial(n){<br>
+            if(n == 1){<br>
+                return n;<br>
+            }else{<br>
+                return n*factorial(n-1)<br>
+            }<br>
+         }<br>
   
-         document.write(factorial(5))
+         document.write(factorial(5))<br>
     </code>
 </body>
 </html>
